TRUS-2676 Correcting spacing and styling on pages

--- a/app/assets/stylesheets/maintainatrustfrontend-app.scss
+++ b/app/assets/stylesheets/maintainatrustfrontend-app.scss
@@ -34,6 +34,10 @@
     }
 }
 
+.info-maintaining-warning-margin-top {
+    margin-top: govuk-spacing(5);
+}
+
 .push-text-top--3 {
   padding-top: govuk-spacing(3);
 }
@@ -59,12 +63,6 @@
   .govuk-warning-text {
     font-size: 19px;
     line-height: 1.31579;
-  }
-}
-
-@media (min-width: 40.0625em) {
-  .govuk-warning-text {
-    margin-bottom: 30px;
   }
 }
 
